--- a/Introductions/Edwin.html
+++ b/Introductions/Edwin.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>My Self Introduction</title>
@@ -8,35 +8,59 @@
 
     <h1>Edwin Ng</h1>
 
-    <img src="psyduck.gif" alt="psyduck" width="200">
-    <p>
-        Hello! I'm currently a senior at Brooklyn College majoring in Information Systems.  
-        Here is my Github!: <a href="https://github.com/edwinng5">https://github.com/edwinng5</a>.
-    </p>
+    <img src="psyduck.gif" alt="psyduck">
 
-    <h2>My Favorite Places in NYC</h2>
-    <ol>
-        <li>Chinatown</li>
-        <li>Brooklyn Bridge</li>
-        <li>Times Square</li>
-        <li>Governor's Island</li>
-    </ol>
+    <div id="main-content">
+        <p>
+            Hello! I'm currently a senior at Brooklyn College majoring in Information Systems. Here are my links!: 
+            <div class = "contact-item">
+                <a href="https://github.com/edwinng5">Github</a>
+            </div>
+        </p>
 
-    <h2>My Achievements</h2>
-    <table border="1">
-        <tr>
-            <th>Achievement</th>
-        </tr>
-        <tr>
-            <td>Traveled across all states in the east coast</td>
-        </tr>
-        <tr>
-            <td>Got a perfect score on driving test</td>
-        </tr>
-        <tr>
-            <td>Ran a marathon</td>
-        </tr>
-    </table>
+        <h2>My Favorite Places in NYC</h2>
+        <div class="section-block">
+            <ol>
+                <li>Chinatown</li>
+                <li>Brooklyn Bridge</li>
+                <li>Times Square</li>
+                <li>Governor's Island</li>
+            </ol>
+        </div>
+
+        <h2>My Achievements</h2>
+        <table border="1">
+            <tr>
+                <th>Achievement</th>
+                <th>Description</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td>Traveled East Coast</td>
+                <td>Visited all states on the east coast of the US.</td>
+                <td>2023</td>
+            </tr>
+            <tr>
+                <td>Perfect Driving Test</td>
+                <td>Achieved a perfect score on the official driving examination.</td>
+                <td>2022</td>
+            </tr>
+            <tr>
+                <td>Marathon Finisher</td>
+                <td>Completed a full-length marathon.</td>
+                <td>2024</td>
+            </tr>
+        </table>
+        
+        <div id="box-container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+        </div>
+    </div>
 
 </body>
 </html>
