Start of homepage and minor fixes

--- a/Introductions/Edwin.html
+++ b/Introductions/Edwin.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>My Self Introduction</title>
@@ -23,7 +23,7 @@
     </ol>
 
     <h2>My Achievements</h2>
-    <table border="1">
+    <table>
         <tr>
             <th>Achievement</th>
         </tr>
