--- a/Introductions/Edwin.html
+++ b/Introductions/Edwin.html
@@ -29,7 +29,7 @@
         </div>
 
         <h2>My Achievements</h2>
-        <table border="1">
+        <table>
             <tr>
                 <th>Achievement</th>
                 <th>Description</th>
