Color Change and fixes for homepage

--- a/Frontend/homepage.html
+++ b/Frontend/homepage.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="nav-bar-container">
-      <nav class="navbar bg-body-tertiary">
+      <nav class="navbar custom-color">
         <div class="container-fluid">
           <a class="navbar-brand">
               <img src="../Assets/logo.png" id="logo">
@@ -131,7 +131,7 @@
 
       <div class="right-container">
         <div id="your-cookbook-btn">
-          <button type="button" class="btn btn-primary">Your Cookbook</button>
+          <button type="button" class="btn btn-primary"><h5>Your Cookbook</h5></button>
         </div>
 
         <div id="favorites-container">
