Converted html and css to React. Created Filter and Navbar components. Added React Bootstrap and Hot Toast React libraries

--- a/Frontend/homepage.html
+++ b/Frontend/homepage.html
@@ -119,7 +119,7 @@
             <div id="list-ingredients-box">
               <textarea class="form-control" aria-label="With" placeholder="List your ingredients here (comma-separated)..." id="textarea-ingredients"></textarea>
 
-              <div id="ingredients-showcase-box">
+              <!-- <div id="ingredients-showcase-box">
                 <table>
                   <thead>
                       <tr>
@@ -247,7 +247,7 @@
                       </tr>
                   </tbody>
               </table>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
